made those buttons do thangs

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- PROJECT STYLES  -->
   <link rel="stylesheet" href="./assets/styles/main.css">
+  <link rel="shortcut icon" href="#">
 
   <title>Black Excellence Reference</title>
 </head>
